fix where score was outside view on mobile device

--- a/src/style.css
+++ b/src/style.css
@@ -40,7 +40,7 @@ main {
 .score {
   display: grid;
   grid-template: auto auto / repeat(2, 1fr);
-  column-gap: 300px;
+  column-gap: 200px;
   font-weight: bold;
 }       
 
